[gd_scene load_steps=5 format=3 uid="uid://dpgm53ma28el3"]

[ext_resource type="PackedScene" uid="uid://drwq1egf0iqg" path="res://maps/scenes/World1.tscn" id="1"]
[ext_resource type="PackedScene" uid="uid://cbjn5ft671v0t" path="res://player/player.tscn" id="2"]
[ext_resource type="Script" path="res://main.gd" id="3"]
[ext_resource type="PackedScene" uid="uid://dgyd3dbk4k46w" path="res://objects/object.tscn" id="4_x8mdg"]

[node name="Main" type="Node3D"]
script = ExtResource("3")

[node name="Player" parent="." instance=ExtResource("2")]

[node name="World" parent="." instance=ExtResource("1")]

[node name="DefaultObject" parent="World" instance=ExtResource("4_x8mdg")]

[node name="CollisionShape3D" parent="World/DefaultObject" index="0"]
disabled = true

[connection signal="change_scene_to_file" from="." to="Player" method="_on_Main_change_scene"]
[connection signal="ready" from="Player" to="." method="_on_Player_ready"]

[editable path="World/DefaultObject"]
